# kinect_ros

./: .travis.yml  README.md  sonar-project.properties
.github/workflows/: industrial_ci.yml
driver_guided_robot/: CMakeLists.txt  package.xml
driver_guided_robot/include/control_system/: system_manager.hpp
driver_guided_robot/include/init_state/: init_control.hpp
driver_guided_robot/include/internal/: activatable_interface.hpp  serialization.hpp  service_tools.hpp
driver_guided_robot/launch/: kinect_driver_arm_tracking.py  kinect_driver_only.launch.py  kinect_driver_servo.launch.py  kinect_ros_trace_endpoint.rviz  moveit_pose_tracking.launch.py
driver_guided_robot/src/control_system/: system_manager.cpp
driver_guided_robot/src/init_state/: init_control.cpp
filter_points/: CMakeLists.txt  package.xml
filter_points/include/filter_points/: FilterPoints.hpp  GeometryUtils.hpp
filter_points/include/utils/: GeometryUtils.hpp
filter_points/src/: FilterPoints.cpp  GeometryUtils.cpp
kinect_ros_trace_endpoint/: CMakeLists.txt  package.xml
kinect_ros_trace_endpoint/config/: controllers.yaml  fake_controllers.yaml  iiwa_controllers.yaml  iiwa_simulated_config.yaml  iiwa_start_positions.yaml  kinematics.yaml  moveit_iiwa14.yaml  ompl_planning.yaml
kinect_ros_trace_endpoint/include/kinect_ros_trace_endpoint/: MarkerPublisher.hpp  MoveItWithMarkerPosNode.hpp  PosePublisher.hpp
kinect_ros_trace_endpoint/launch/: kinect_ros_trace_endpoint.rviz  kinect_ros_trace_endpoint_fake_controller.launch.py  kinect_ros_trace_endpoint_fake_filter.launch.py
kinect_ros_trace_endpoint/src/: MarkerPublisher.cpp  MoveItWithMarkerPosNode.cpp  PosePublisher.cpp
map_arm/: CMakeLists.txt  package.xml
map_arm/include/map_arm/: GeometryUtils.hpp  MapArm.hpp
map_arm/include/utils/: CameraUtils.hpp
map_arm/launch/: kinect_driver_arm_tracking.launch.py
map_arm/src/: GeometryUtils.cpp  MapArm.cpp
process_motion/: package.xml  setup.cfg  setup.py
process_motion/config/: LBR_iiwa_DH.yaml  moving_average.yaml  set_endpoint_1.yaml  smoothing.yaml
process_motion/process_motion/: kinematics.py  kinematics_tests.py  script_parser.py  set_endpoint.py  smoothing.py
process_motion/scripts/: kinematics.py  moving_avg.py
process_motion/src/: kinematics.py  moving_avg.py  script_parser.py  set_endpoint.py  test_kinematics.py
replay_motion/: CMakeLists.txt  package.xml
replay_motion/include/replay_motion/: Instrumentor.h  ReplayMotion.hpp
replay_motion/src/: ReplayMotion.cpp
