<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>process_motion</name>
  <version>0.0.0</version>
  <description>Postprocessing of recorded motions</description>
  <maintainer email="svastits1@gmail.com">Aron Svastits</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
